Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <main>
-        <h1>Título do Site</h1>
+        <h1>Cursos Grátis</h1>
     </main>
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto do Artigo 001</p>
+        <h2>Curso de HTML 5 e CSS3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae esse reiciendis odit eaque minus numquam sequi cupiditate natus corrupti expedita fuga animi, rerum accusantium tenetur veritatis reprehenderit eos harum voluptatibus.</p>
     </article>
-    <article>Artigo 002</article>
-    <p>Texto do Artigo 002</p>
+    <article>Curso de Javascript</article>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit optio assumenda doloremque placeat repellat temporibus enim voluptate dolore similique quidem suscipit ipsam, cum tempora tenetur? Magnam officia tenetur veritatis?</p>
 </body>
 </html>
